--- a/testremote_new/templates/register.html
+++ b/testremote_new/templates/register.html
@@ -42,7 +42,7 @@
             <input type="password" class="form-control" id="usr_paswd" name="usr_paswd" value="">
     </div>
 
-    <input name="registerbutton" type="submit" value="Register">
+    <input name="register-but" type="submit" value="Register">
 
     <div class="vertical_space_10vh"></div>
 
