--- a/testremote_new/templates/navbar_item.html
+++ b/testremote_new/templates/navbar_item.html
@@ -1,3 +1,3 @@
-<li class="nav-item @@active@@">
-    <a class="nav-link" href="@@men_destination@@">@@men_caption@@@@sr_only@@</a>
+<li class="nav-item">
+    <a class="nav-link" href="@@men_destination@@">@@men_caption@@</a>
 </li>
